@@ -86,6 +86,7 @@ unsigned IsMPICollective (unsigned EvType);
 #define SAMPLING_ADDRESS_TLB_HITORMISS_EV    32000005
 #define SAMPLING_ADDRESS_REFERENCE_COST_EV   32000006
 #define SAMPLING_ADDRESS_ALLOCATED_OBJECT_EV 32000007
+#define SAMPLING_ADDRESS_ALLOCATED_OBJECT_ALLOC_EV 32000009
 #define SAMPLING_ADDRESS_STATIC_OBJECT_EV    32000008
 #define SAMPLING_ADDRESS_ALLOCATED_OBJECT_CALLER_EV 32000100 /* internal purposes, not emitted into paraver tracefile */
 
